<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_8">

    <FrameLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:text="@string/favourite_places"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#fff"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/no_favourite_places_empty_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_favourites_data"
            android:textAppearance="?android:textAppearanceLarge" />

        <ListView
            android:id="@+id/widget_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="3dp"
            tools:listitem="@layout/list_item_favourites" />
    </FrameLayout>

</LinearLayout>