<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_back_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/t"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="#dfdfdf"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/from"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fromName"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textColor="#000"
                android:textSize="23sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_down" />

        </RelativeLayout>

        <TextView
            android:id="@+id/t1"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="#dfdfdf"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/to"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toName"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textColor="#000"
                android:textSize="23sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_down" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/search"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>